@@ -49,7 +49,7 @@ void input_moveto			__P ((int new_pos));
 
 void tty_puts           __P ((const char *s));
 void tty_putc           __P ((char c));
-void tty_printf         __P ((const char *format, ...)) PRINTF_FUNCTION(1, 2);
+int  tty_printf         __P ((const char *format, ...)) PRINTF_FUNCTION(1, 2);
 int  tty_read           __P ((char *buf, size_t count));
 void tty_gets           __P ((char *s, int size));
 void tty_flush          __P ((void));
